--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <a class="menu" href="">☰</a>
         </nav>
     </header>
-    <aside id="slideshow">
+    <aside id="slideshow" style="width:100%">
         <div>
            <img class="item" src="img/slide/pexels-burst-373883.jpg" alt="">
            <div>
