--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <link rel="shortcut icon" href="img/favicon/Screenshot 2021-06-21 011316.png" type="image/x-icon">
     <link rel="stylesheet" href="Styes/main.css">
+    
+    <style>
+    aside>div{width: 100%}
+     </style>
 </head>
 <body>
     <header>
